--- a/research/slides_Yao.tex
+++ b/research/slides_Yao.tex
@@ -200,7 +200,7 @@ General setup:
         \item University's quotas and historical cutoffs are common knowledge. 
         \item Historical cutoffs are gotten by running DirSD.
         \item Students need to pay search costs to know their own preferences.
-        \item Prederences are private knowledge.
+        \item Preferences are private knowledge.
         \item Students receive more rewards for being assigned to more preferred university.
     \end{itemize}
 \end{frame}
@@ -233,7 +233,7 @@ Predictions:
 Predictions:
 \vspace{0.5cm}
     \begin{itemize}
-        \item Hypothesis 4: Welfare: on average IM < PA, but not hold for all students.\\
+        \item Hypothesis 4: Welfare: on average IM $<$ PA, but not hold for all students.\\
         \item Hypothesis 5: Smaller group size produces better matching outcomes.\\
         \item Hypothesis 6: Increasing the ROL in PA improves the matching outcomes.
     \end{itemize}
